# greednought

./: README.md  pyproject.toml
src/greednought/: greednought.py
