[project]
name = "greednought"
version = "0.1.2"
description = "A text adventure game created for Week 5 of Hack Club's Siege"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
greednought = "greednought.greednought:main"

[tool.setuptools.packages.find]
where = ["src"]
